// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarToggler renders with close icon when isOpen is true 1`] = `
<div>
  <div
    class="group w-max cursor-pointer rounded border p-1.5 border-gray-200 hover:bg-gray-200 active:bg-transparent dark:border-gray-700 dark:hover:bg-gray-700 dark:active:bg-transparent"
    role="navbar-toggler"
  >
    <svg
      aria-hidden="true"
      class="h-6 w-auto text-gray-500 group-hover:text-gray-800 group-active:text-gray-500 dark:text-gray-400 group-hover:dark:text-gray-100 group-active:dark:text-gray-400"
      data-testid="close-icon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 20 20"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`NavbarToggler renders with menu icon when isOpen is false 1`] = `
<div>
  <div
    class="group w-max cursor-pointer rounded border p-1.5 border-gray-200 hover:bg-gray-200 active:bg-transparent dark:border-gray-700 dark:hover:bg-gray-700 dark:active:bg-transparent"
    role="navbar-toggler"
  >
    <svg
      aria-hidden="true"
      class="h-6 w-auto text-gray-500 group-hover:text-gray-800 group-active:text-gray-500 dark:text-gray-400 group-hover:dark:text-gray-100 group-active:dark:text-gray-400"
      data-testid="menu-icon"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6h16M4 12h8m-8 6h16"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>
</div>
`;
